# musikteori

./: README.md  greppnamn.md  pyproject.toml
musikteori/: dozenal.json  fingering_namer.py  fretboard_diagram.py  interesting.md  jins_diagram.py  maqamator.py  midi_analyzer.py  pitch_constellations.py  sayr.py  scales.json  wholetone_fingering.md
tests/: test_midi_analyzer.py  test_musikteori.py
