[tool.poetry]
name = "musikteori"
version = "0.1.0"
description = ""
authors = ["emilberwald"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.1.2"
numpy = "^1.18.1"
pint = "^0.10.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
