[project]
name = "musikteori"
version = "0.0.0"
description = "Musikteori"
readme = "README.md"
requires-python = ">=3.8"

#winget install pygraphviz
#python -m pip install --config-settings="--global-option=build_ext"  --config-settings="--global-option=-IC:\Program Files\Graphviz\include"  --config-settings="--global-option=-LC:\Program Files\Graphviz\lib"  pygraphviz
dependencies = ["networkx", "opencv-python", "numpy", "pint", "scipy", "pygraphviz"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov[all]", "black", "flake8", "mypy"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["musikteori"]

[tool.setuptools.package-data]
musikteori = ["scales.json", "dozenal.json"]

[tool.black]
line-length = 120

[tool.mypy]
line_length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503"
